Fix links in danger-alerts being hard to read

--- a/webroot/css/style.less
+++ b/webroot/css/style.less
@@ -82,6 +82,12 @@ a:hover {
 		text-decoration: underline;
 	}
 }
+.alert-danger {
+	a {
+		color: #a94442;
+		font-weight: bold;
+	}
+}
 .markdown-example {
 	margin-bottom: 50px;
 	margin-top: -50px;
